--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 	<scm>
 		<connection>scm:git:dev.biit-solutions.com:BiiTCommonUtils.git</connection>
 		<developerConnection>scm:git:dev.biit-solutions.com:BiiTCommonUtils.git</developerConnection>
+		<tag>common-utils-0.2.2</tag>
 	</scm>
 	
 	<properties>
