Changed again BiitLogger. Fixed some errors in the test and changed version number.

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,6 +1,6 @@
 # Application
-log4j.logger.com.biit.utils.logger.CommonUtilsLogger=ALL, CONSOLE
-log4j.additivity.com.biit.utils.logger.CommonUtilsLogger=false
+log4j.logger.com.biit.logger.BiitCommonLogger=ALL, CONSOLE
+log4j.additivity.com.biit.logger.BiitCommonLogger=false
 
 # Console appender
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
