--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${maven-surefire.version}</version>
 				<configuration>
+					<!-- DUE TO BUG IN SUREFIRE
+					https://twitter.com/fheremans/status/1057214797417271296
+					https://github.com/GoogleCloudPlatform/cloud-opensource-java/pull/201
+					-->
+					<useSystemClassLoader>false</useSystemClassLoader>
 					<useFile>false</useFile>
 					<trimStackTrace>false</trimStackTrace>
 					<suiteXmlFiles>
