--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.biit</groupId>
 	<artifactId>common-utils</artifactId>
 	<packaging>jar</packaging>
-	<version>0.4.191-SNAPSHOT</version>
+	<version>0.4.191</version>
 	<name>Generic utilities used in all Biit projects.</name>
 	<description>Read settings files and basic logging.</description>
 
@@ -25,7 +25,7 @@
 	<scm>
 		<connection>scm:git:git.biit-solutions.com:BiiTCommonUtils.git</connection>
 		<developerConnection>scm:git:git.biit-solutions.com:BiiTCommonUtils.git</developerConnection>
-		<tag>common-utils</tag>
+		<tag>common-utils-0.4.191</tag>
 	</scm>
 
 	<properties>
@@ -35,7 +35,7 @@
 		<plugin.compiler.version>3.8.1</plugin.compiler.version>
 		<plugin.exec.version>1.2.1</plugin.exec.version>
 		<org.testng.version>6.8</org.testng.version>
-		<maven-surefire.version>2.22.2</maven-surefire.version>
+		<maven-surefire.version>2.17</maven-surefire.version>
 		<maven-resources-plugin.version>2.7</maven-resources-plugin.version>
 		<log4j.version>1.2.17</log4j.version>
 		<javax.mail.version>1.4.7</javax.mail.version>
@@ -44,6 +44,9 @@
 		<project.scm.id>git</project.scm.id>
 		<checkstyle.version>2.17</checkstyle.version>
 		<findbug.version>3.0.5</findbug.version>
+		<maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
+		<maven-javadoc-plugin.version>3.1.0</maven-javadoc-plugin.version>
+		<maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -70,6 +73,21 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>${maven-deploy-plugin.version}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>${maven-javadoc-plugin.version}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>${maven-deploy-plugin.version}</version>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
