--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.biit</groupId>
 	<artifactId>common-utils</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0.33-SNAPSHOT</version>
+	<version>1.1.1-SNAPSHOT</version>
 	<name>Generic utilities used in all Biit projects.</name>
 	<description>Read settings files and basic logging.</description>
 
@@ -37,7 +37,8 @@
 		<org.testng.version>6.8</org.testng.version>
 		<maven-surefire.version>2.17</maven-surefire.version>
 		<maven-resources-plugin.version>2.7</maven-resources-plugin.version>
-		<log4j.version>1.2.17</log4j.version>
+		<slf4j.version>1.7.32</slf4j.version>
+		<logback.version>1.2.6</logback.version>
 		<javax.mail.version>1.4.7</javax.mail.version>
 		<maven-release-plugin.version>2.5.3</maven-release-plugin.version>
 		<maven-scm-provider-gitexe.version>1.9.2</maven-scm-provider-gitexe.version>
@@ -50,11 +51,22 @@
 	</properties>
 
 	<dependencies>
-		<!-- log4j -->
+		<!-- log -->
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>${log4j.version}</version>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>${logback.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
 		</dependency>
 		<!-- MAIL -->
 		<dependency>
