--- a/.github/workflows/github-package.yml
+++ b/.github/workflows/github-package.yml
@@ -21,6 +21,6 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
       - name: Publish package
-        run: mvn --batch-mode deploy -DskipTests -DdeploySnapshot=true --file pom.xml
+        run: mvn --batch-mode deploy -DdeploySnapshot=true --file pom.xml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
