--- a/.github/workflows/sonar-backend.yml
+++ b/.github/workflows/sonar-backend.yml
@@ -34,7 +34,7 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Build with Maven
-        run: mvn -B package --file backend/pom.xml -DskipTests
+        run: mvn -B package --file pom.xml -DskipTests
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@master
         with:
