Preparing branch as open source

--- a/pom.xml
+++ b/pom.xml
@@ -8,32 +8,50 @@
 	<name>Generic utilities used in all Biit projects.</name>
 	<description>Read settings files and basic logging.</description>
 
+	<organization>
+		<name>BiiT Sourcing Solutions S.L.</name>
+		<url>https://www.biit-solutions.com/</url>
+	</organization>
+
 	<parent>
 		<groupId>com.biit</groupId>
 		<artifactId>versions</artifactId>
-		<version>[0,1)</version>
+		<version>[0.1,0.2)</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
-	<distributionManagement>
-		<repository>
-			<id>central</id>
-			<name>libs-releases</name>
-			<url>https://artifactory.biit-solutions.com/artifactory/libs-release</url>
-		</repository>
-		<snapshotRepository>
-			<id>snapshots</id>
-			<name>libs-snapshot</name>
-			<url>https://artifactory.biit-solutions.com/artifactory/libs-snapshot</url>
-		</snapshotRepository>
-	</distributionManagement>
+    <distributionManagement>
+        <repository>
+            <id>central</id>
+            <name>Maven Central</name>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
+        <snapshotRepository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/BiiT-Solutions/BiiTCommonUtils</url>
+        </snapshotRepository>
+    </distributionManagement>
 
 
-	<scm>
-		<connection>scm:git:git.biit-solutions.com:BiiT/BiiTCommonUtils.git</connection>
-		<developerConnection>scm:git:git.biit-solutions.com:BiiT/BiiTCommonUtils.git</developerConnection>
-		<tag>common-utils-1.1.57</tag>
-	</scm>
+    <scm>
+        <connection>scm:git:ssh://git@github.com/BiiT-Solutions/BiiTCommonUtils.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/BiiT-Solutions/BiiTCommonUtils.git</developerConnection>
+        <url>https://github.com/BiiT-Solutions/BiiTCommonUtils.git</url>
+        <tag>biit-common-utils</tag>
+    </scm>
+
+	<licenses>
+		<license>
+			<name>GNU AGPL v3</name>
+			<url>https://www.gnu.org/licenses/agpl-3.0.html</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<properties>
+		<main.basedir>${project.basedir}</main.basedir>
+	</properties>
 
 	<dependencies>
 		<!-- log -->
@@ -116,27 +134,6 @@
 						<checkModificationExclude>pom.xml</checkModificationExclude>
 					</checkModificationExcludes>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>${maven-checkstyle.version}</version>
-				<configuration>
-					<configLocation>${main.basedir}/checkstyle.xml</configLocation>
-					<encoding>UTF-8</encoding>
-					<consoleOutput>true</consoleOutput>
-					<failsOnError>true</failsOnError>
-					<linkXRef>false</linkXRef>
-				</configuration>
-				<executions>
-					<execution>
-						<id>validate</id>
-						<phase>validate</phase>
-						<goals>
-							<goal>check</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
